--- a/src/app/mensagens/dialogTable/dialog.table.component.html
+++ b/src/app/mensagens/dialogTable/dialog.table.component.html
@@ -1,4 +1,4 @@
-<div class="card panel-default" style="max-width: 48rem;">
+<div class="card panel-default" style="width: 60rem;">
     <div class="card-header">{{data.cabecalho}}</div>
     <div class="card-body">
         <h5 class="card-title">Itens Medida</h5>
