--- a/src/app/gerenciar/produto/produto-cadastrar/produto-cadastrar.component.html
+++ b/src/app/gerenciar/produto/produto-cadastrar/produto-cadastrar.component.html
@@ -70,7 +70,8 @@
                         <label>&nbsp;</label>
                         <label for="porcentagem">Porcentagem</label>
                         <input type="number" formControlName="porcentagem" class="form-control"
-                               [ngClass]="{ 'is-invalid': submitted && f.porcentagem.errors }"/>
+                               [ngClass]="{ 'is-invalid': submitted && f.porcentagem.errors }"
+                                (keyup)="calcularPrecoVenda()"/>
                         <div *ngIf="submitted && f.porcentagem.errors" class="invalid-feedback">
                             <div *ngIf="f.porcentagem.errors.required">Porcentagem é obrigatório</div>
                         </div>
@@ -97,7 +98,7 @@
                     <div class="col-md-4 mb-4">
                         <div class="form-group">
                             <label for="porcentagemDesconto">Porcentagem de desconto</label>
-                            <input type="number" formControlName="porcentagemDesconto" class="form-control"
+                            <input type="number" formControlName="porcentagemDesconto" class="form-control" (keyup)="calculaDesconto()"
                                    [ngClass]="{ 'is-invalid': submitted && f.porcentagemDesconto.errors }"/>
                             <div *ngIf="submitted && f.porcentagemDesconto.errors" class="invalid-feedback">
                                 <div *ngIf="f.porcentagemDesconto.errors.required">Porcentagem de desconto é obrigatório</div>
