--- a/src/app/gerenciar/produto/produto-listar/produto-listar.component.html
+++ b/src/app/gerenciar/produto/produto-listar/produto-listar.component.html
@@ -3,123 +3,126 @@
         <h3 class="card-title">Consultar {{page_nome}}</h3>
     </div>
     <div class="card-body">
+      <div class="table-responsive-sm">
         <div class="table-responsive-sm">
-            <table class="table table-bordered" *ngIf="produtos.length ===0" scope="row">
-                <tbody>
-                <tr>
-                    <td class="col text-center" colspan="4">{{nunhum_encontrado}}</td>
+          <table class="table table-bordered" *ngIf="produtos.length ===0" scope="row">
+            <tbody>
+            <tr>
+              <td class="col text-center" colspan="4">{{nunhum_encontrado}}</td>
+            </tr>
+            </tbody>
+          </table>
+          <div class="card mb-3" *ngFor="let produto of produtos; let i = index;">
+            <div class="card-body">
+              <table class="table table-sm" style="margin-bottom: 0rem;">
+                <thead class="thead-dark">
+                <tr scope="row">
+                  <th class="col-sm-2">
+                    {{produto.codigo}} - {{produto.barCode}} - {{produto.nome}}
+                  </th>
+                  <th class="col-sm-2" style="text-align: right; margin-right: 5rem;">
+                    <button type="button" class="btn btn-secondary btn-sm" style="padding: 1px 32px;" (click)="onCollaps(i, $event)">+</button>
+                  </th>
                 </tr>
-                </tbody>
-            </table>
-            <div class="card mb-3" *ngFor="let produto of produtos; let i = index;">
-                <div class="card-body">
-                    <table class="table table-sm" style="margin-bottom: 0rem;">
-                        <thead class="thead-dark">
-                            <tr scope="row">
-                                <th class="col-sm-2">
-                                    {{produto.codigo}} - {{produto.barCode}} - {{produto.nome}}
-                                </th>
-                                <th class="col-sm-2" style="text-align: right; margin-right: 5rem;">
-                                    <button type="button" class="btn btn-secondary btn-sm" style="padding: 1px 32px;" (click)="onCollaps(i, $event)">+</button>
-                                </th>
-                            </tr>
+                </thead>
+                <tbody>
+                  <tr scope="row">
+                    <td colspan="2">
+                      <table class="table table-sm" style="margin-bottom: 0rem;">
+                        <tbody>
+                          <tr scope="row">
+                            <td style="text-align: center">
+                              <img src="https://assets.adidas.com/images/h_600,f_auto,q_auto:sensitive,fl_lossy/2f488fe90ddf43fdbe77a8c100ca2bb3_9366/POD-S3_1_Shoes_Black_AQ1059_01_standard.jpg"
+                                   alt="{{produto.nome}}" class="img-fluid" style="height: 90px; width: 90px;">
+                            </td>
+                            <td>
+                              <table class="table table-sm">
+                                <thead class="thead-light">
+                                  <tr scope="row">
+                                    <th class="col-sm-1">Código de Barras</th>
+                                    <th class="col-sm-2">Nome</th>
+                                    <th class="col-sm-1">Fornecedor</th>
+                                    <th class="col-sm-1">Categoria</th>
+                                    <th class="col-sm-1">Subcategoria</th>
+                                    <th class="col-sm-1">Marca</th>
+                                    <th class="col-sm-1">Estoque</th>
+                                    <th class="col-sm-1">Preço Venda</th>
+                                  </tr>
+                                </thead>
+                                <tbody>
+                                  <tr scope="row">
+                                    <td>{{produto.barCode}}</td>
+                                    <td>{{produto.nome}}</td>
+                                    <td>{{produto.fornecedor.nome}}</td>
+                                    <td>{{produto.categoria.nome}}</td>
+                                    <td>{{produto.subcategoria.nome}}</td>
+                                    <td>{{produto.marca.nome}}</td>
+                                    <td>0</td>
+                                    <td>{{produto.precoVenda}}</td>
+                                  </tr>
+                                </tbody>
+                              </table>
+                            </td>
+                          </tr>
+                        </tbody>
+                      </table>
+                    </td>
+                  </tr>
+                  <tr scope="row" *ngIf="i === expandedIndex">
+                    <td colspan="2">
+                      <table class="table table-sm text-center" style="margin-bottom: 0rem;">
+                        <thead class="thead-light">
+                          <tr scope="row">
+                            <th class="col-sm-2">Preço custo</th>
+                            <th class="col-sm-2">Porcentagem</th>
+                            <th class="col-sm-2">Preço venda</th>
+                            <th class="col-sm-2">Porcentagem Desconto</th>
+                            <th class="col-sm-2">Desconto</th>
+                            <th class="col-sm-2">Preço Oferta</th>
+                          </tr>
                         </thead>
                         <tbody>
-                            <tr scope="row">
-                                <td colspan="2">
-                                    <table class="table table-sm" style="margin-bottom: 0rem;">
-                                        <tbody>
-                                        <tr scope="row">
-                                            <td style="text-align: center">
-                                                <img src="https://assets.adidas.com/images/h_600,f_auto,q_auto:sensitive,fl_lossy/2f488fe90ddf43fdbe77a8c100ca2bb3_9366/POD-S3_1_Shoes_Black_AQ1059_01_standard.jpg"
-                                                     alt="{{produto.nome}}" class="img-fluid" style="height: 90px; width: 90px;">
-                                            </td>
-                                            <td>
-                                                <table class="table table-sm" style="margin-bottom: 0rem;">
-                                                    <thead class="thead-light">
-                                                    <tr scope="row">
-                                                        <th class="col-sm-1">Código de Barras</th>
-                                                        <th class="col-sm-2">Nome</th>
-                                                        <th class="col-sm-1">Fornecedor</th>
-                                                        <th class="col-sm-1">Categoria</th>
-                                                        <th class="col-sm-1">Subcategoria</th>
-                                                        <th class="col-sm-1">Marca</th>
-                                                        <th class="col-sm-1">Estoque</th>
-                                                        <th class="col-sm-1">Preço Venda</th>
-                                                    </tr>
-                                                    </thead>
-                                                    <tbody>
-                                                    <tr scope="row">
-                                                        <td>{{produto.barCode}}</td>
-                                                        <td>{{produto.nome}}</td>
-                                                        <td>{{produto.fornecedor.nome}}</td>
-                                                        <td>{{produto.categoria.nome}}</td>
-                                                        <td>{{produto.subcategoria.nome}}</td>
-                                                        <td>{{produto.marca.nome}}</td>
-                                                        <td>0</td>
-                                                        <td>{{produto.precoVenda}}</td>
-                                                    </tr>
-                                                    </tbody>
-                                                </table>
-                                            </td>
-                                        </tr>
-                                    </table>
-                                </td>
-                            </tr>
-                            <tr scope="row" *ngIf="i === expandedIndex">
-                                <td colspan="2">
-                                    <table class="table table-sm text-center" style="margin-bottom: 0rem;">
-                                        <thead class="thead-light">
-                                            <tr scope="row">
-                                                <th class="col-sm-2">Preço custo</th>
-                                                <th class="col-sm-2">Porcentagem</th>
-                                                <th class="col-sm-2">Preço venda</th>
-                                                <th class="col-sm-2">Porcentagem Desconto</th>
-                                                <th class="col-sm-2">Desconto</th>
-                                                <th class="col-sm-2">Preço Oferta</th>
-                                            </tr>
-                                        </thead>
-                                        <tbody>
-                                            <tr scope="row">
-                                                <td>{{produto.precoCusto}}</td>
-                                                <td>{{produto.porcentagem}}</td>
-                                                <td> {{produto.precoVenda}}</td>
-                                                <td>{{produto.porcentagemDesconto}}</td>
-                                                <td>{{produto.desconto}}</td>
-                                                <td>{{produto.precoOferta}}</td>
-                                            </tr>
-                                        </tbody>
-                                    </table>
-                                </td>
-                            </tr>
-                            <tr scope="row" *ngIf="i === expandedIndex">
-                                <td colspan="2">
-                                    <table class="table table-sm text-center" style="margin-bottom: 0rem;">
-                                        <thead class="thead-light">
-                                            <tr scope="row">
-                                                <th class="col-sm-4">valor</th>
-                                                <th class="col-sm-4">Quantidade</th>
-                                                <th class="col-sm-4">Flag Dominio</th>
-                                            </tr>
-                                        </thead>
-                                        <tbody>
-                                            <tr *ngFor="let item of produto.produtoHasItensTipoMedida" scope="row">
-                                                <td>{{item.itensTipoMedida.valor}}</td>
-                                                <td>{{item.quantidade}}</td>
-                                                <td>
-                                                    <label *ngFor="let dominio of item.dominios">
-                                                        <input type="checkbox">{{dominio.nome}}
-                                                    </label>
-                                                </td>
-                                            </tr>
-                                        </tbody>
-                                    </table>
-                                </td>
-                            </tr>
+                          <tr scope="row">
+                            <td>{{produto.precoCusto}}</td>
+                            <td>{{produto.porcentagem}}</td>
+                            <td> {{produto.precoVenda}}</td>
+                            <td>{{produto.porcentagemDesconto}}</td>
+                            <td>{{produto.desconto}}</td>
+                            <td>{{produto.precoOferta}}</td>
+                          </tr>
                         </tbody>
-                    </table>
-                </div>
+                      </table>
+                    </td>
+                  </tr>
+                  <tr scope="row" *ngIf="i === expandedIndex">
+                    <td colspan="2">
+                      <table class="table table-sm text-center" style="margin-bottom: 0rem;">
+                        <thead class="thead-light">
+                        <tr scope="row">
+                          <th class="col-sm-4">valor</th>
+                          <th class="col-sm-4">Quantidade</th>
+                          <th class="col-sm-4">Flag Dominio</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr *ngFor="let item of produto.produtoHasItensTipoMedida" scope="row">
+                          <td>{{item.itensTipoMedida.valor}}</td>
+                          <td>{{item.quantidade}}</td>
+                          <td>
+                            <label *ngFor="let dominio of item.dominios">
+                              <input type="checkbox">{{dominio.nome}}
+                            </label>
+                          </td>
+                        </tr>
+                        </tbody>
+                      </table>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
             </div>
+          </div>
         </div>
+      </div>
     </div>
 </div>
