--- a/src/app/gerenciar/venda/venda-confirmar/venda-confirmar.component.html
+++ b/src/app/gerenciar/venda/venda-confirmar/venda-confirmar.component.html
@@ -2,105 +2,111 @@
   <div class="card-header">
     <h3 class="card-title">Confirmar dados Venda</h3>
   </div>
-  <div class="card-body">
-    <div class="table-responsive-sm">
-      <div class="card mb-3">
-        <div class="card-body">
-          <div class="card panel-default">
-            <div class="card-header">
-              <h6 class="card-title">Dados Venda</h6>
-            </div>
-            <div class="card-body" >
-              <div class="form-group row">
-                <div class="col-md-3 mb-2  border border-primary">
-                  <label>Codigo:</label>
-                  <label class="font-weight-bold">{{venda.codigo}}</label>
-                </div>
-                <div class="col-md-3 mb-2  border border-primary">
-                  <label>Codigo:</label>
-                  <label class="font-weight-bold">{{venda.codigo}}</label>
-                </div>
-                <div class="col-md-3 mb-2  border border-primary">
-                  <label>Codigo:</label>
-                  <label class="font-weight-bold">{{venda.codigo}}</label>
-                </div>
-                <div class="col-md-3 mb-2  border border-primary">
-                  <label>Codigo:</label>
-                  <label class="font-weight-bold">{{venda.codigo}}</label>
-                </div>
+<!--  <form [formGroup]="vendaAddProdutosFormGroup">-->
+    <div class="card-body">
+      <div class="table-responsive-sm">
+        <div class="card mb-3">
+          <div class="card-body">
+            <div class="card panel-default">
+              <div class="card-header">
+                <h6 class="card-title">Dados Venda</h6>
               </div>
-            </div>
-          </div>
-          <div class="dropdown-divider"></div>
-          <!-- itens venda -->
-          <div class="card panel-default">
-            <div class="card-header">
-              <h6 class="card-title">Itens Venda</h6>
-            </div>
-            <div class="card mb-3" *ngFor="let vendaItemProduto of venda.vendaHasItemProduto; let i = index;">
               <div class="card-body" >
                 <div class="form-group row">
-                  <div class="table-responsive">
-                    <table class="table " style="margin-bottom: 0rem;">
-                      <thead class="thead-dark">
-                        <tr scope="row">
-                          <th class="col-sm-2">
-                            {{vendaItemProduto.produtoHasItensTipoMedida.produto.codigo}} - {{vendaItemProduto.produtoHasItensTipoMedida.produto.barCode}} - {{vendaItemProduto.produtoHasItensTipoMedida.produto.nome}}
-                          </th>
-                        </tr>
-                      </thead>
-                      <tbody>
-                        <tr scope="row">
-                          <td>
-                            <table class="table " style="margin-bottom: 0rem;">
-                              <tbody>
-                              <tr scope="row">
-                                <td style="text-align: center">
-                                  <img src="https://assets.adidas.com/images/h_600,f_auto,q_auto:sensitive,fl_lossy/2f488fe90ddf43fdbe77a8c100ca2bb3_9366/POD-S3_1_Shoes_Black_AQ1059_01_standard.jpg"
-                                       alt="{{vendaItemProduto.produtoHasItensTipoMedida.produto.nome}}" class="img-fluid" style="height: 90px; width: 90px;">
-                                </td>
-                                <td>
-                                  <table class="table">
-                                    <thead class="thead-light">
-                                    <tr scope="row">
-                                      <th scope="col">Código de Barras</th>
-                                      <th scope="col">Nome</th>
-                                      <th scope="col">descrição</th>
-                                      <th scope="col">Tamanho</th>
-
-                                      <th scope="col">Quantidade</th>
-                                      <th scope="col">Preço Unitário</th>
-                                      <th scope="col">Subtotal</th>
-                                    </tr>
-                                    </thead>
-                                    <tbody>
-                                    <tr scope="row">
-                                      <td>{{vendaItemProduto.produtoHasItensTipoMedida.produto.barCode}}</td>
-                                      <td>{{vendaItemProduto.produtoHasItensTipoMedida.produto.nome}}</td>
-                                      <td>{{vendaItemProduto.produtoHasItensTipoMedida.produto.descricao}}</td>
-                                      <td>{{vendaItemProduto.produtoHasItensTipoMedida.produto.medida.itensTipoMedida[0].valor}}</td>
-                                      <td>{{vendaItemProduto.quantidade}}</td>
-                                      <td>{{vendaItemProduto.produtoHasItensTipoMedida.produto.precoVenda}}</td>
-                                      <td>{{vendaItemProduto.produtoHasItensTipoMedida.valorUnitario}}</td>
-                                    </tr>
-                                    </tbody>
-                                  </table>
-                                </td>
-                              </tr>
-                              </tbody>
-                            </table>
-                          </td>
-                        </tr>
-                      </tbody>
-                    </table>
+                  <div class="col-md-3 mb-2  border border-primary">
+                    <label>Codigo:</label>
+                    <label class="font-weight-bold">{{venda.codigo}}</label>
+                  </div>
+                  <div class="col-md-3 mb-2  border border-primary">
+                    <label>Codigo:</label>
+                    <label class="font-weight-bold">{{venda.codigo}}</label>
+                  </div>
+                  <div class="col-md-3 mb-2  border border-primary">
+                    <label>Codigo:</label>
+                    <label class="font-weight-bold">{{venda.codigo}}</label>
+                  </div>
+                  <div class="col-md-3 mb-2  border border-primary">
+                    <label>Codigo:</label>
+                    <label class="font-weight-bold">{{venda.codigo}}</label>
                   </div>
                 </div>
               </div>
             </div>
+            <div class="dropdown-divider"></div>
+            <!-- itens venda -->
+            <div class="card panel-default">
+              <div class="card-header">
+                <h6 class="card-title">Itens Venda</h6>
+              </div>
+              <div class="card mb-3" *ngFor="let vendaItemProduto of vendaHasItemProduto; let i = index;">
+                <div class="card-body" >
+                  <div class="form-group row">
+                    <div class="table-responsive">
+                      <table class="table " style="margin-bottom: 0rem;">
+                        <thead class="thead-dark">
+                          <tr scope="row">
+                            <th class="col-sm-2">
+                              {{vendaItemProduto.produtoHasItensTipoMedida.produto.codigo}} - {{vendaItemProduto.produtoHasItensTipoMedida.produto.barCode}} - {{vendaItemProduto.produtoHasItensTipoMedida.produto.nome}}
+                            </th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <tr scope="row">
+                            <td>
+                              <table class="table " style="margin-bottom: 0rem;">
+                                <tbody>
+                                <tr scope="row">
+                                  <td style="text-align: center">
+                                    <img src="https://assets.adidas.com/images/h_600,f_auto,q_auto:sensitive,fl_lossy/2f488fe90ddf43fdbe77a8c100ca2bb3_9366/POD-S3_1_Shoes_Black_AQ1059_01_standard.jpg"
+                                         alt="{{vendaItemProduto.produtoHasItensTipoMedida.produto.nome}}" class="img-fluid" style="height: 90px; width: 90px;">
+                                  </td>
+                                  <td>
+                                    <table class="table">
+                                      <thead class="thead-light">
+                                      <tr scope="row">
+                                        <th scope="col">Código de Barras</th>
+                                        <th scope="col">Nome</th>
+                                        <th scope="col">descrição</th>
+                                        <th scope="col">Tamanho</th>
+
+                                        <th scope="col">Quantidade</th>
+                                        <th scope="col">Preço Unitário</th>
+                                        <th scope="col">Subtotal</th>
+                                      </tr>
+                                      </thead>
+                                      <tbody>
+                                      <tr scope="row">
+                                        <td>{{vendaItemProduto.produtoHasItensTipoMedida.produto.barCode}}</td>
+                                        <td>{{vendaItemProduto.produtoHasItensTipoMedida.produto.nome}}</td>
+                                        <td>{{vendaItemProduto.produtoHasItensTipoMedida.produto.descricao}}</td>
+                                        <td>{{vendaItemProduto.produtoHasItensTipoMedida.produto.medida.itensTipoMedida[0].valor}}</td>
+                                        <td>{{vendaItemProduto.quantidade}}</td>
+                                        <td>{{vendaItemProduto.produtoHasItensTipoMedida.produto.precoVenda}}</td>
+                                        <td>{{vendaItemProduto.produtoHasItensTipoMedida.valorUnitario}}</td>
+                                      </tr>
+                                      </tbody>
+                                    </table>
+                                  </td>
+                                </tr>
+                                </tbody>
+                              </table>
+                            </td>
+                          </tr>
+                        </tbody>
+                      </table>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- fim itens venda -->
           </div>
-          <!-- fim itens venda -->
+          <div class="card-footer bg-transparent text-right">
+            <button type="button" class="btn btn-secondary" (click)="onConfirmar()">Confirmar</button>
+            <button type="button" class="btn btn-secondary ml-1">Cancelar</button>
+          </div>
         </div>
       </div>
     </div>
-  </div>
+<!--  </form>-->
 </div>
