--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,9 @@
 <app-menu></app-menu>
 <div class="jumbotron">
   <div class="container">
-    <app-alerta></app-alerta>
-    <app-marca></app-marca>
+    app.component.html
+<!--    <app-alerta></app-alerta>-->
+
   </div>
 </div>
 <div class="text-center">
