layout and dashborad, galery component not work

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,31 @@
-<app-header></app-header>
-<app-menu></app-menu>
-<div class="jumbotron">
-  <div class="container">
-    app.component.html
-<!--    <app-alerta></app-alerta>-->
-
-  </div>
+<div class="container-fluid">
+    <div id="container">
+        <div class="sidebar">
+            <ul>
+                <li><a href="#">Nosaltres</a></li>
+                <li><a href="#">Contacte</a></li>
+            </ul>
+            <ul class="proyecto">
+                <li><a href="#">Proyecto 1</a></li>
+                <li><a href="#">Proyecto 2</a></li>
+                <li><a href="#">Proyecto 3</a></li>
+                <li><a href="#">Proyecto 4</a></li>
+                <li><a href="#">Proyecto 5</a></li>
+                <li><a href="#">Proyecto 6</a></li>
+                <li><a href="#">Proyecto 7</a></li>
+            </ul>
+        </div>
+        <div class="body">
+            <div class="header">
+                <p class="title">mapp.</p>
+            </div>
+            <div class="content">
+                <app-dashboard>
+                </app-dashboard>
+            </div>
+        </div>
+        <div class="sidebar right">
+            sidebar right
+        </div>
+    </div>
 </div>
-<div class="text-center">
-  <p>
-  </p>
-  © 2019 Standard App Co.
-  <p>
-  </p>
-</div>
-
