--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,3 +1,14 @@
-<p>
-  dashboard works!
-</p>
+<div id="gallery">
+    <ul class="wrapper">
+        <li><img src="../../assets/imgs/foto-01.png" alt=""></li>
+        <li><img src="../../assets/imgs/foto-02.png" alt=""></li>
+        <li><img src="../../assets/imgs/foto-03.png" alt=""></li>
+        <li><img src="../../assets/imgs/foto-04.png" alt=""></li>
+        <li><img src="../../assets/imgs/foto-05.png" alt=""></li>
+        <li><img src="../../assets/imgs/foto-06.png" alt=""></li>
+    </ul>
+    <div class="nav">
+        <i class="anterior disabled fa fa-angle-double-left" onClick="galeriaAnterior();"></i>
+        <i class="siguiente fa fa-angle-double-right" onClick="galeriaSiguiente();"></i>
+    </div>
+</div>
