--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,62 @@
-/* You can add global styles to this file, and also import other style files */
-@import "../node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css";
+body, html, .container-fluid, .sidebar, .body{
+    height: 100%;
+    min-height: 100%;
+    font-family: "Arial", "Helvetica", "sans-serif";
+}
+
+#container{
+    width:100%;
+    height:100%;
+}
+.sidebar{
+    width:20%;
+    float:left;
+    height:100%;
+}
+
+.body{
+    float:left;
+    width:60%;
+    height:100%;
+}
+
+.content{
+    float:left;
+    width:100%;
+    height:75%;
+}
+
+.header{
+    height: 25%;
+}
+
+.title{
+    text-align: center;
+    font-size: 100px;
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding-top: 10px;
+    padding-left: 20px;
+}
+
+li a {
+    display: block;
+    color: #000;
+    padding: 8px 16px;
+    text-decoration: none;
+}
+
+/* Change the link color on hover */
+li a:hover {
+    color: #000;
+    text-decoration: none;
+}
+
+.proyecto {
+    padding-top: 20px;
+}
+
+
