--- a/src/app/gerenciar/venda/vanda-add-produto/vanda-add-produto.component.html
+++ b/src/app/gerenciar/venda/vanda-add-produto/vanda-add-produto.component.html
@@ -44,7 +44,7 @@
                                         <tbody>
                                             <tr *ngFor="let itemProdutoVenda of vendaHasItemProduto; let i = index;">
                                                 <td style="vertical-align: middle;">
-                                                    {{itemProdutoVenda.produtoHasItensTipoMedida.codigo}}</td>
+                                                    {{itemProdutoVenda.produtoHasItensTipoMedida.produto.barCode}}</td>
                                                 <td style="vertical-align: middle;">
                                                     {{itemProdutoVenda.produtoHasItensTipoMedida.produto.nome}}</td>
                                                 <td>
