--- a/src/app/gerenciar/venda/venda-confirmar/venda-confirmar.component.html
+++ b/src/app/gerenciar/venda/venda-confirmar/venda-confirmar.component.html
@@ -79,7 +79,7 @@
                                         <td>{{vendaItemProduto.produtoHasItensTipoMedida.produto.barCode}}</td>
                                         <td>{{vendaItemProduto.produtoHasItensTipoMedida.produto.nome}}</td>
                                         <td>{{vendaItemProduto.produtoHasItensTipoMedida.produto.descricao}}</td>
-                                        <td>{{vendaItemProduto.produtoHasItensTipoMedida.produto.medida.itensTipoMedida[0].valor}}</td>
+                                        <td>{{vendaItemProduto.produtoHasItensTipoMedida.itensTipoMedida.valor}}</td>
                                         <td>{{vendaItemProduto.quantidade}}</td>
                                         <td>{{vendaItemProduto.produtoHasItensTipoMedida.produto.precoVenda}}</td>
                                         <td>{{vendaItemProduto.produtoHasItensTipoMedida.valorUnitario}}</td>
