--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,14 @@
 <app-header></app-header>
 <app-menu></app-menu>
 <div class="jumbotron">
-  <div class="container">
-    app.component.html
-<!--    <app-alerta></app-alerta>-->
-
+  <div class="container-fluid">
+    <router-outlet></router-outlet>
   </div>
 </div>
 <div class="text-center">
   <p>
   </p>
-  © 2019 Standard App Co.
+  © 2021 Maap Admin.
   <p>
   </p>
 </div>
