--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -5,11 +5,16 @@
     <span class="navbar-toggler-icon"></span>
   </button>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-        </li>
-      </ul>
-    </div>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link" routerLink="management/project/list" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Project Management
+        </a>
+      </li>
+    </ul>
+  </div>
 </nav>
