--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -11,10 +11,20 @@
         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item dropdown">
-        <a class="nav-link" routerLink="management/project/list" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Project Management
+        <a class="nav-link" routerLink="management/project" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+
         </a>
       </li>
+
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownManagement" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Management
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdownManagement">
+          <a class="dropdown-item" routerLink="management/project/list">Project</a>
+        </div>
+      </li>
+
     </ul>
   </div>
 </nav>
